# nem-der

./: .gitignore  README.md  app.py  context.md  plan.md  pyproject.toml  requirements.txt
notebooks/: 01_explore_data.ipynb
src/: data_loader.py
src/models/: __init__.py  price.py  result.py  scada.py  solar.py
