[project]
name = "nem-der"
version = "0.1.0"
description = "Interactive analysis of DER impact on NEM spot price dynamics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nemosis>=3.5.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.30.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
]
